// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullCalendar should match the snapshot 1`] = `
<div>
  <div
    class="ui basic secondary segment"
  >
    <div
      class="ui three column middle aligned grid"
    >
      <div
        class="seven wide left column"
      >
        <div
          class="ui tiny icon buttons"
        >
          <button
            class="ui button"
          >
            <i
              class="left chevron icon"
            />
          </button>
          <button
            class="ui button"
          >
            <i
              class="right chevron icon"
            />
          </button>
        </div>
        <div
          class="ui tiny buttons"
        >
          <button
            class="ui button"
          >
            Today
          </button>
        </div>
        <div
          class="ui tiny view buttons"
        >
          <button
            class="ui button"
          >
            Month
          </button>
          <button
            class="ui button blue"
          >
            Week
          </button>
          <button
            class="ui button"
          >
            Day
          </button>
        </div>
      </div>
      <div
        class="two wide center aligned column"
      >
        <h2
          class="ui grey header"
        >
          Jan 1 – 7, 2018
        </h2>
      </div>
      <div
        class="seven wide right aligned column"
      >
        <div
          class="ui text menu"
        >
          <div
            class="right item"
          >
            <div
              class="ui text menu"
            >
              <div
                class="item"
              >
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="calendar-wrapper"
  >
    <div
      id="calendar"
      class="calendar fc fc-unthemed fc-ltr"
    >
      <div
        class="fc-view-container"
        style=""
      >
        <div
          class="fc-view fc-basicWeek-view fc-basic-view"
          style=""
        >
          <table
            class=""
          >
            <thead
              class="fc-head"
            >
              <tr>
                <td
                  class="fc-head-container fc-widget-header"
                >
                  <div
                    class="fc-row fc-widget-header"
                  >
                    <table
                      class=""
                    >
                      <thead>
                        <tr>
                          <th
                            class="fc-day-header fc-widget-header fc-mon fc-past"
                            data-date="2018-01-01"
                          >
                            <span>
                              Mon 1/1
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-tue fc-past"
                            data-date="2018-01-02"
                          >
                            <span>
                              Tue 1/2
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-wed fc-past"
                            data-date="2018-01-03"
                          >
                            <span>
                              Wed 1/3
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-thu fc-past"
                            data-date="2018-01-04"
                          >
                            <span>
                              Thu 1/4
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-fri fc-past"
                            data-date="2018-01-05"
                          >
                            <span>
                              Fri 1/5
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-sat fc-past"
                            data-date="2018-01-06"
                          >
                            <span>
                              Sat 1/6
                            </span>
                          </th>
                          <th
                            class="fc-day-header fc-widget-header fc-sun fc-past"
                            data-date="2018-01-07"
                          >
                            <span>
                              Sun 1/7
                            </span>
                          </th>
                        </tr>
                      </thead>
                    </table>
                  </div>
                </td>
              </tr>
            </thead>
            <tbody
              class="fc-body"
            >
              <tr>
                <td
                  class="fc-widget-content"
                >
                  <div
                    class="fc-scroller fc-day-grid-container"
                    style="overflow-x: hidden; overflow-y: hidden; height: auto;"
                  >
                    <div
                      class="fc-day-grid fc-unselectable"
                    >
                      <div
                        class="fc-row fc-week fc-widget-content"
                      >
                        <div
                          class="fc-bg"
                        >
                          <table
                            class=""
                          >
                            <tbody>
                              <tr>
                                <td
                                  class="fc-day fc-widget-content fc-mon fc-past"
                                  data-date="2018-01-01"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-tue fc-past"
                                  data-date="2018-01-02"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-wed fc-past"
                                  data-date="2018-01-03"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-thu fc-past"
                                  data-date="2018-01-04"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-fri fc-past"
                                  data-date="2018-01-05"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-sat fc-past"
                                  data-date="2018-01-06"
                                />
                                <td
                                  class="fc-day fc-widget-content fc-sun fc-past"
                                  data-date="2018-01-07"
                                />
                              </tr>
                            </tbody>
                          </table>
                        </div>
                        <div
                          class="fc-content-skeleton"
                        >
                          <table>
                            <tbody>
                              <tr>
                                <td />
                                <td />
                                <td />
                                <td />
                                <td />
                                <td />
                                <td />
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="ui inverted dimmer croud-loader"
    >
      <div
        class="ui text loader large"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`FullCalendar views changes views based on props 1`] = `
<div
  class="ui tiny view buttons"
>
  <button
    class="ui button"
  >
    Agenda
  </button>
  <button
    class="ui button"
  >
    Basic
  </button>
</div>
`;

exports[`FullCalendar views highlights current view 1`] = `
<button
  class="ui button blue"
>
  Week
</button>
`;

exports[`FullCalendar views show default views 1`] = `
<div
  class="ui tiny view buttons"
>
  <button
    class="ui button"
  >
    Month
  </button>
  <button
    class="ui button blue"
  >
    Week
  </button>
  <button
    class="ui button"
  >
    Day
  </button>
</div>
`;
